--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ six==1.16.0
 termcolor==1.1.0
 tqdm==4.62.0
 typing-extensions==3.10.0.0
-
-torch==1.7.1+cu110
-torchvision==0.8.2+cu110
+scikit-image==0.19.3
+matplotlib==3.5.3
+pyrender==0.1.45
+tensorboard==2.10.0
